Fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-rows: repeat(4, minmax(100px, 1fr));
     grid-template-columns: repeat(4, minmax(100px, 1fr));
+    overflow: hidden;
 }
 
 .sidebar {
@@ -127,11 +128,25 @@ svg {
 
 .content-right {
     display: grid;
-    grid-row: 2 / 5;
+    grid-row: 2 / 4;
     grid-column: 4 / 5;
+    gap: 50px;
+}
+
+.announcements {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 
 .trending-group {
     display: flex;
     align-items: center;
+    max-height: 50px;
 }
